tests/reference/asr-loop_03-e7ccaee.stderr
semantic error: Assignment to loop variable `i` is not allowed
 --> tests/errors/loop_03.py:5:9
  |
5 |         i=i*10
  |         ^ 
